--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -34,7 +34,12 @@ dependencies:
   firebase_core: ^2.13.1
   firebase_auth: ^4.6.2
   cloud_firestore: ^4.8.0
-  http: ^0.13.5
+  http: ^1.3.0
+  flutter_map: ^7.0.0
+  latlong2: ^0.9.0
+  fluttertoast: ^8.2.2
+  dropdown_search: ^5.0.6
+  provider: ^6.0.5
 
 
 
@@ -51,20 +56,20 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "images/icon.png"
+  image_path: "assets/images/icon.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: true
-    image_path: "images/icon.png"
+    image_path: "assets/images/icon.png"
     background_color: "#hexcode"
     theme_color: "#hexcode"
   windows:
     generate: true
-    image_path: "images/icon.png"
+    image_path: "assets/images/icon.png"
     icon_size: 48 # min:48, max:256, default: 48
   macos:
     generate: true
-    image_path: "images/icon.png"
+    image_path: "assets/images/icon.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -86,8 +91,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/
-  #   - images/a_dot_ham.jpeg
+    - assets/images/
+    - assets/Data/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
