--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -93,6 +93,7 @@ flutter:
   assets:
     - assets/images/
     - assets/Data/
+    - assets/Data/medicine_store_list.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
