--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   firebase_auth: ^4.6.2
   cloud_firestore: ^4.8.0
   http: ^1.3.0
-  flutter_map: ^7.0.0
+  flutter_map: ^8.1.1
   latlong2: ^0.9.0
   fluttertoast: ^8.2.2
   dropdown_search: ^5.0.6
@@ -46,6 +46,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  shared_preferences: ^2.5.3
+  qr_flutter: ^4.1.0
+  flutter_barcode_sdk: ^2.4.0
+  pdf: ^3.11.3
 
 dev_dependencies:
   flutter_test:
@@ -94,6 +98,7 @@ flutter:
     - assets/images/
     - assets/Data/
     - assets/Data/medicine_store_list.json
+    - assets/data/doctors.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
