--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   qr_flutter: ^4.1.0
   flutter_barcode_sdk: ^2.4.0
   pdf: ^3.11.3
+  printing: ^5.14.2
 
 dev_dependencies:
   flutter_test:
