--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -97,6 +97,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/icon.png
     - assets/Data/
     - assets/Data/medicine_store_list.json
     - assets/Data/doctors.json
